# remotetranscode

./: .gitignore  README.md  browserclient.cpp  browserclient.h  ffmpeghandler.cpp  ffmpeghandler.h  logger.cpp  logger.h  m3u8handler.cpp  m3u8handler.h  main.cpp  main.h  meson.build  meson_options.txt  r_dash2ts.cpp  r_dash2ts_debug.cpp  streamhandler.cpp  streamhandler.h  transcodeconfig.cpp  transcodeconfig.h  vdrclient.cpp  vdrclient.h
config/: codecs.ini
static-content/movie/: create_full_video.sh  transparent-full.webm
subprojects/: dash2ts.wrap  mini.wrap  spdlog.wrap  thrift.wrap  tiny_process_library.wrap
subprojects/packagefiles/dash2ts/: meson.build  remove_sockets.patch
subprojects/packagefiles/mini-0.9.14/: meson.build
subprojects/packagefiles/spdlog-1.15.0/: meson-build.patch  meson.build
subprojects/packagefiles/spdlog-1.15.0/src/: meson.build
subprojects/packagefiles/tiny-process-library-4bf0e59e64f18d3080a1ce4e853775de2181e993/: meson.build
thrift-services/: README
thrift-services/src-client/: BrowserClient.cpp
